--- a/jugador-objeto/plantilla-sfml/CMakeLists.txt
+++ b/jugador-objeto/plantilla-sfml/CMakeLists.txt
@@ -4,7 +4,7 @@ project(prueba)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra")
 
-add_executable(prueba main.cpp src/Arachide.cpp src/Jugador.cpp src/Sprite_arachide.cpp src/Vida.cpp src/Objeto.cpp)
+add_executable(prueba main.cpp src/Arachide.cpp src/Jugador.cpp src/Sprite_arachide.cpp src/Vida.cpp src/Objeto.cpp src/Moneda.cpp src/Arma.cpp src/Cofre.cpp)
 
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
 find_package(SFML REQUIRED system window graphics network audio)
